examples/negative/pub_effect/pub_fn_mutable_unannotated.kai
# Negative fixture (#511 / pub-effect contract): a `pub fn` does
# not declare `Mutable` but writes through `Mutable.array_set` on
# an array passed in from outside the function (observable
# mutation per docs/effects-stdlib.md §`Mutable`).

pub fn touch(xs: Array[Int]) : Int = {
  let _ = Mutable.array_set(xs, 0, 99)
  Mutable.array_get(xs, 0)
}

fn main() : Int / Mutable {
  let xs = Mutable.array_make(3, 0)
  touch(xs)
}
